--- a/cigar_rating_config.html
+++ b/cigar_rating_config.html
@@ -20,7 +20,7 @@
     
     <script>
         // 应用程序 ID - 必须和 index.html 中的值一致！
-        const __app_id = 'cigar-score-pro-v2-production'; 
+        const __app_id = 'Pistacho Cigar Rating System'; 
 
         // 您的 Firebase 项目配置 (作为 JSON 字符串) - 必须和 index.html 中的值一致！
         // ** 请将以下占位符替换为您 Firebase 项目的真实配置！**
