--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     
     <script>
         // 应用程序 ID - 用于构建 Firestore 路径：/artifacts/{appId}/...
-        const __app_id = 'cigar-score-pro-v2-production'; // <-- 建议修改
+        const __app_id = 'pistacho-b9efe'; // <-- 建议修改
 
         // 您的 Firebase 项目配置 (作为 JSON 字符串)
         // ** 请将以下占位符替换为您 Firebase 项目的真实配置！**
