--- a/results.html
+++ b/results.html
@@ -182,7 +182,7 @@
                         </div>
                         <div class="flex-shrink-0 w-32 h-32 rounded-full border-4 border-white border-opacity-50 flex flex-col items-center justify-center bg-white bg-opacity-10 backdrop-blur-sm">
                             <span class="text-6xl font-black">${grade.grade}</span>
-                            <span class="font-semibold tracking-widest uppercase">Grade</span>
+                            <span class="font-semibold tracking-widest uppercase">${grade.name_en}</span>
                         </div>
                     </div>
                 </div>
@@ -269,4 +269,5 @@
     </script>
 </body>
 </html>
+
 
