--- a/history.html
+++ b/history.html
@@ -47,7 +47,6 @@
 
             window.certifyRating = async function(ratingId, event) {
                 event.stopPropagation();
-                // (*** 已修复：直接使用 event.target 获取按钮 ***)
                 const button = event.target;
                 button.textContent = '认证中...';
                 button.disabled = true;
@@ -83,7 +82,6 @@
                 event.stopPropagation();
                 if (!confirm("确定要取消这条记录的 Pistacho 认证吗？")) return;
 
-                // (*** 已修复：直接使用 event.target 获取按钮 ***)
                 const button = event.target;
                 button.textContent = '取消中...';
                 button.disabled = true;
@@ -203,7 +201,10 @@
                     fetchAndRenderHistory(user);
                 });
             } catch(e) {
-                document.getElementById('history-container').innerHTML = `<div class="p-6 bg-red-100 text-red-700">Firebase 初始化失败: ${e.message}</div>`;
+                const container = document.getElementById('history-container');
+                if (container) {
+                    container.innerHTML = `<div class="p-6 bg-red-100 text-red-700">Firebase 初始化失败: ${e.message}</div>`;
+                }
             }
         }
     </script>
