--- a/index.html
+++ b/index.html
@@ -122,11 +122,14 @@
         // 2. 认证 (无 SDK 依赖)
         // ---------------------------------------------------
         window.login = function() {
+            const redirectUri = window.location.origin;
+            console.log("发起认证，回调地址为:", redirectUri); // 添加日志
+
             // 手动构建授权 URL
             const authorizeUrl = new URL('/oidc/auth', AUTHING_HOST);
             authorizeUrl.search = new URLSearchParams({
                 client_id: AUTHING_APP_ID,
-                redirect_uri: window.location.origin,
+                redirect_uri: redirectUri,
                 response_type: 'code',
                 scope: 'openid profile email phone roles', // 获取我们需要的全部信息
                 state: Math.random().toString(36).substring(2) // 随机 state 防止 CSRF
@@ -141,6 +144,8 @@
              logoutUrl.search = new URLSearchParams({
                 post_logout_redirect_uri: window.location.origin
              }).toString();
+             // 清除前端会话
+             sessionStorage.removeItem('userInfo');
              window.location.href = logoutUrl.toString();
         }
 
