--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <nav class="mb-4 flex justify-between items-center bg-white p-3 rounded-lg shadow-sm">
              <a href="index.html" class="text-xl font-bold text-indigo-600">Pistacho评分</a>
              <div class="space-x-4">
-                 <a href="history.html" class="text-gray-600 hover:text-indigo-600">历史记录</a>
+                 <a href="history.html" class="text-gray-600 hover:text-indigo-600">我的评分历史</a>
                  <a href="certified.html" class="text-gray-600 hover:text-indigo-600">认证评分</a>
              </div>
         </nav>
