--- a/index.html
+++ b/index.html
@@ -455,12 +455,12 @@
         // ---------------------------------------------------
 
         async function loadConfig() {
-            // ... (无变化)
             document.getElementById('config-load-status').textContent = '正在从 Cloudflare 同步配置...';
             try {
                 const apiUrl = new URL('/api/config/latest', window.location.origin);
                 const response = await fetch(apiUrl);
                 if (!response.ok) throw new Error(`服务器错误: ${response.statusText}`);
+                // **FIX**: Assign to global ratingConfig
                 ratingConfig = await response.json();
                 calculateWeights(ratingConfig);
                 userRatings = {};
@@ -469,6 +469,7 @@
             } catch (error) {
                 console.error("加载配置失败:", error);
                 document.getElementById('config-load-status').textContent = '配置加载失败';
+                // **FIX**: Use ratingConfig in the error message, not undefined 'config'
                 alert(`加载应用核心配置失败，请刷新页面重试。\n错误详情: ${error.message}`);
             }
         }
@@ -476,10 +477,10 @@
         function getRatingId(category, criterion) { return `${String(category || '').trim()}-${String(criterion || '').trim()}`; }
 
         function calculateWeights(config) {
-            // ... (无变化)
-            if (!config) return;
+             // **FIX**: Add check for config existence
+            if (!config || !config.ratingCriteria) return;
             let grandTotal = 0, totalCriteriaCount = 0;
-            (config.ratingCriteria || []).forEach(category => {
+            config.ratingCriteria.forEach(category => {
                 let categoryTotal = 0;
                 (category.criteriaList || []).forEach(criterion => {
                     categoryTotal += (criterion.weight || 0);
@@ -493,10 +494,10 @@
         }
 
         function calculateFinalScore() {
-            // ... (无变化)
-            if (!ratingConfig) return 0;
+             // **FIX**: Add check for ratingConfig
+            if (!ratingConfig || !ratingConfig.ratingCriteria) return 0;
             let totalScore = 0;
-            (config.ratingCriteria || []).forEach(category => {
+            ratingConfig.ratingCriteria.forEach(category => {
                 (category.criteriaList || []).forEach(criterion => {
                     const id = getRatingId(category.category, criterion.name);
                     const selectedOptionIndex = userRatings[id];
@@ -509,11 +510,12 @@
         }
 
         window.showResults = async function() {
-            // ... (无变化, 它只关心 currentImageKey 是否有值)
+            // ... (逻辑无变化, 但依赖于 ratingConfig)
             const token = sessionStorage.getItem('accessToken');
             if (!currentAuthUser || !token) {
                 return alert("请登录后才能提交评分。");
             }
+             // **FIX**: Add check for ratingConfig
             if (!ratingConfig || Object.keys(userRatings).length === 0) {
                  return alert("请至少选择一个评分项后再操作。");
             }
@@ -607,8 +609,8 @@
         };
 
         function renderRatingView() {
-            // ... (无变化)
-            if (!ratingConfig) {
+            // **FIX**: Add check for ratingConfig
+            if (!ratingConfig || !ratingConfig.ratingCriteria) {
                 const formContainer = document.getElementById('rating-form-container');
                 formContainer.innerHTML = `<div class="text-center p-6 bg-white rounded-lg shadow"><p>无法加载评分标准。</p></div>`;
                 return;
@@ -616,14 +618,16 @@
             const totalScore = calculateFinalScore();
             document.getElementById('app-title-display').textContent = ratingConfig.appTitle;
             document.getElementById('app-description-display').textContent = ratingConfig.description;
-            document.getElementById('total-weight-max-display').textContent = ratingConfig.totalWeightMax;
+            // **FIX**: Use optional chaining for totalWeightMax
+            document.getElementById('total-weight-max-display').textContent = ratingConfig.totalWeightMax ?? 0;
             document.getElementById('current-score-display').textContent = totalScore.toFixed(2);
             const ratedCount = Object.keys(userRatings).length;
+            // **FIX**: Use optional chaining for totalCriteriaCount
             const totalCount = ratingConfig.totalCriteriaCount || 1;
             document.getElementById('progress-bar').style.width = `${(ratedCount / totalCount) * 100}%`;
             document.getElementById('progress-text').textContent = `${ratedCount} / ${totalCount}`;
             const formContainer = document.getElementById('rating-form-container');
-            formContainer.innerHTML = (ratingConfig.ratingCriteria || []).map((category) => `
+            formContainer.innerHTML = ratingConfig.ratingCriteria.map((category) => `
                 <div class="bg-white p-6 rounded-xl shadow-lg mb-8 border-l-4 border-indigo-500">
                     <h3 class="text-xl font-bold text-indigo-700 mb-2">${category.category}</h3>
                     <p class="text-gray-500 text-sm mb-4">${category.detail || ''}</p>
@@ -665,7 +669,6 @@
         // ---------------------------------------------------
 
         async function loadRatingForEdit(ratingId) {
-            // ... (无变化, 它会正确处理 imageUrl)
             const token = sessionStorage.getItem('accessToken');
             if (!token) {
                  alert("无法验证身份，请重新登录。");
@@ -682,6 +685,16 @@
                     throw new Error(err.error || '加载评分失败');
                 }
                 const ratingData = await response.json();
+
+                 // **FIX**: Check if ratingData exists before accessing properties
+                if (!ratingData) {
+                    throw new Error(`Rating with ID ${ratingId} not found or inaccessible.`);
+                }
+                 // **FIX**: Ensure ratingConfig is loaded before calling renderRatingView
+                if (!ratingConfig) {
+                    throw new Error("Rating config not loaded yet.");
+                }
+
                 document.getElementById('cigar-name').value = ratingData.cigarInfo?.name || '';
                 document.getElementById('cigar-size').value = ratingData.cigarInfo?.size || '';
                 document.getElementById('cigar-origin').value = ratingData.cigarInfo?.origin || '';
@@ -695,7 +708,7 @@
                 actionButton.textContent = "保存更改";
                 actionButton.classList.remove('bg-green-600', 'hover:bg-green-700');
                 actionButton.classList.add('bg-blue-600', 'hover:bg-blue-700');
-                renderRatingView();
+                renderRatingView(); // Now safe to call
                 document.getElementById('config-load-status').textContent = `已加载评分 ${ratingId} (编辑模式)`;
             } catch (e) {
                  alert(`加载评分失败: ${e.message}`);
@@ -708,7 +721,6 @@
         // ---------------------------------------------------
 
         window.onload = async function() {
-            // ... (无变化)
             const urlParams = new URLSearchParams(window.location.search);
             const code = urlParams.get('code');
             const editId = urlParams.get('edit');
@@ -720,9 +732,11 @@
             }
             setUser(user);
             console.log("Current User Object for role check:", currentAuthUser);
+            // **FIX**: Ensure loadConfig completes before potentially loading edit data
             await loadConfig();
             if (editId) {
                 await loadRatingForEdit(editId);
+                 // Clear the 'edit' param from URL after loading
                 window.history.replaceState({}, document.title, window.location.pathname);
             }
         };
